syntax = "proto3";
package dymensionxyz.dymension.transfer;

import "gogoproto/gogo.proto";

option go_package = "github.com/dymensionxyz/dymension/v3/x/transfer/types";

// if given in eibc metadata, eibc fullfillment funds will be directed to a module address
// and a hook will be executed, and finalize will also call the hook
// note: only for onRecvPacket
message CompletionHookCall {
  // name of hook
  string name = 1;
  // opaque data to be interpreted by the hook (passed in as arg)
  bytes data = 2;
}
